//     Bugfixes:
//         Bugfixes go there.
//     Internal changes:
//         Changes to the code that do not affect the behavior of the program.
----------------------------------------------------------------------------------------------------------------------
Version:
Date:
    Features:
        - Add pseudo-items representing a recipe's total sushi-inputs and sushi-outputs.
    Bugfixes:
        - Fixed counts are hidden on disabled recipes, since editing them won't work properly.
----------------------------------------------------------------------------------------------------------------------
Version: 2.1.0
Date: October 29th 2024
    Features:
        - Focus the built count and fixed count edit boxes when first opening them.
        - Add a dark mode checkbox to the preferences.
    Bugfixes:
        - Recipes no longer have excessive question marks in their names
        - Moved mining and research bonuses have to the Preferences screen.
        - Support games without the Space Age DLC again.
    Internal changes:
        - Added rudimentary tools for drawing tab controls.
----------------------------------------------------------------------------------------------------------------------
Version: 2.0.1
Date: October 23rd 2024
    Bugfixes:
        - Yafc no longer crashes with enabling all feature flags for the Factorio Space Age DLC.
----------------------------------------------------------------------------------------------------------------------
Version: 2.0.0
Date: October 20th 2024
    Features:
        - Updated to (only) work with Factorio 2.0
Version: 0.10.0
Date: Not released separately
    Features:
        - Add OSX-arm64 build.
        - Display link warnings in both the tooltips and the dropdowns.
        - Add additional ways of counting buildings and modules when displaying the shopping list.
        - Allow disable-and-reload when there's an error loading a mod.
    Bugfixes: