@@ -356,6 +356,10 @@ public class RecipeRow : ModelObject<ProductionTable>, IGroupedElement<Productio
     }
     public int? builtBuildings { get; set; }
     /// <summary>
+    /// If <see langword="true"/>, the total item consumption and production signals are shown.
+    /// </summary>
+    public bool showIO { get; set; } = false;
+    /// <summary>
     /// If <see langword="true"/>, the enabled checkbox for this recipe is checked.
     /// </summary>
     public bool enabled { get; set; } = true;
